SED-2056 Logs to info